--- a/src/app/components/leaderboard/leaderboard.component.scss
+++ b/src/app/components/leaderboard/leaderboard.component.scss
@@ -1,7 +1,7 @@
 :host {
   display: block;
   width: 100%;
-  height: 100%;
+  height: auto;
   padding: 1rem;
   padding-bottom: 5rem;
 
